--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: memuse
 Type: Package
-Title: memuse
-Version: 1.0
+Title: Estimate the memory usage of dense, in-core, numeric objects.
+Version: 1.1
 Date: 2013-05-21
 Description: How much ram do you need to store a 100,000 by 100,000 matrix?
   Learn the scintillating answer to this and many more such questions with
@@ -14,12 +14,12 @@ Description: How much ram do you need to store a 100,000 by 100,000 matrix?
   be allocated.  So one can determine the size of enormous matrices even
   from a laptop.
 License: GPL (>= 2)
-Depends: R (>= 2.14.0), methods
+Depends: R (>= 2.14.0), utils, methods
 LazyData: yes
 LazyLoad: yes
 Author: Drew Schmidt
 Maintainer: Drew Schmidt <wrathematics@gmail.com>
-Packaged: 2013-07-17 12:56:03 UTC; mschmid3
+Packaged: 2013-08-07 01:40:36 UTC; mschmid3
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-17 17:20:16
+Date/Publication: 2013-08-07 07:04:13
