--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,10 @@
 import(methods)
 
-exportClasses("memuse")
+exportClasses("memuse", "approx")
 
 exportMethods(
   ### Constructors
-  "mu", "memuse",
+  "mu", "memuse", "object.size",
   ### Accessors
   "size", "unit", "unit.prefix", "unit.names",
   ### Replacers
@@ -13,15 +13,17 @@ exportMethods(
   "print", "show", 
   ### Swaps
   "swap.unit", "swap.prefix", "swap.names",
+  ### howmany's
+  "howmany", "howmany.par",
   ### Misc
-  "howmany", "as.memuse"#, "as.numeric"
+  "as.memuse"#, "as.numeric"
 )
 
 export(
-  # Constructor
+  ### Constructor
   memuse, mu,
-  # Arithmetic
+  ### Arithmetic
   "+", "-", "*", "/", "^", 
-  # Misc
-  print, howbig, howbig.par, howmany
+  ### Misc
+  print, howbig, howbig.par, howmany, howmany.par
 )
